Left & Right nav: Line spacing fixes

--- a/assets/scss/_variables_project.scss
+++ b/assets/scss/_variables_project.scss
@@ -159,11 +159,17 @@ body {
     color: $moon-800;
     background-color: $moon-white;
 }
+.fa-solid .fa-print fa-fw {
+
+}
 // shrink the right nav a bit
 .td-page-meta
 {
     font-size: 16px !important;
-    line-height: 2.5rem !important;
+    a {
+      padding-bottom: 15px;
+      line-height: 22px;
+    }
 }
 // hide the doc site name from the top-left
 .td-navbar .navbar-brand__name { display: none; }
@@ -205,12 +211,19 @@ a:hover {
     }
 }
 
+// Align left-nav with logo
+.td-sidebar-nav {
+  padding-left: 15px !important;
+}
 // Ensure active nav link maintains same weight
 .nav-link.active {
     border-bottom: 2px solid $wandb-gold !important;
     font-weight: 400 !important;  // Keep consistent with other nav links
 }
 
+nav.foldable-nav .with-child, nav.foldable-nav .without-child {
+  padding-left: 10px !important;
+}
 // Update existing chevron styles
 nav.foldable-nav .ul-1 .with-child {
     & > label {
@@ -296,12 +309,13 @@ h6, .td-content h6 {
     text-decoration: underline;
 }
 
+#m-guideshostingiamorg_team_struct-li
+
 .td-sidebar-nav, .td-navbar .nav-link  {
   font-family: "Source Sans Pro", sans-serif;
   a {
     color: $moon-500 !important;
     font-weight: 400;
-    line-height: 2rem;
     &:hover {
       color: $teal-600 !important;
       text-decoration: none !important;
@@ -325,13 +339,15 @@ ol.breadcrumb:before {
     margin-right: 10px;
 }
 
+.td-sidebar-nav__section-title, .td-sidebar-nav__section {
+  margin-bottom: 10px !important;
+  margin-top: 5px !important;
+}
+
 .td-sidebar-nav__section-title {
     display: block;
     font-weight: 400 !important;
     line-height: 19px;
-    margin-bottom: 5px !important;
-    margin-top: 5px !important;
-
     .active {
         font-weight: 400 !important;
     }
@@ -354,17 +370,19 @@ ol.breadcrumb:before {
 #TableOfContents { 
     margin-top: 15px;
     font-size: 16px !important;
-    line-height: 2.5rem !important;
     padding-left: 10px !important;
 
     // Update list styles
     ul { 
-        padding-top: 5px !important;
+        padding-top: 10px !important;
+        li {
+          padding-bottom: 10px;
+          line-height: 22px;
+        }
     }
 
     // Style links consistently with page meta
     a {
-        line-height: 2.5rem !important;
         display: block;
     }
 }
